# fft-signal-analyzer

./: .gitignore  DESKTOP_LAUNCHER_GUIDE.md  FFT_Spectrum_Analyzer.bat  Makefile  QUICKSTART.md  README.md  build_desktop.py  build_exe.py  create_shortcut.ps1  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: config.dev.yaml  config.test.yaml  config.yaml
scripts/: benchmark.py
src/fft_analyzer/: __init__.py
src/fft_analyzer/ai/: __init__.py  anomaly_detector.py  compression_engine.py  signal_classifier.py
src/fft_analyzer/cli/: main.py
src/fft_analyzer/core/: __init__.py  fft_engine.py  filter_engine.py  peak_detector.py  signal_generator.py  signal_loader.py
src/fft_analyzer/export/: __init__.py  advanced_exporter.py  csv_exporter.py  export_manager.py  exporter.py  image_exporter.py  pdf_exporter.py
src/fft_analyzer/models/: __init__.py  peak_info.py  signal_data.py  spectrum_data.py
src/fft_analyzer/ui/: __init__.py  app.py  callbacks.py  layout.py
src/fft_analyzer/ui/components/: __init__.py  config_panel.py  peaks_table.py  plot_panel.py
src/fft_analyzer/utils/: __init__.py  config_manager.py  error_handler.py  logger.py  math_utils.py  production_logger.py  session_manager.py  validators.py
src/fft_analyzer/visualization/: __init__.py  advanced_analyzer.py  freq_domain_plot.py  phase_plot.py  psd_plot.py  time_domain_plot.py  visualizer.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
